<resources>
    <string name="app_name">Database App</string>
    <string name="update_profile_picture">upload profile picture</string>
    <string name="register">Sign Up here</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="log_in">Log In here</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="todo">TODO</string>
    <string name="mobile_no1">Mobile No</string>
    <string name="user_name">User name</string>
    <string name="full_name">Full name</string>
    <string name="log_in1">Log In</string>
    <string name="sql_database_app">SQL Database App</string>
    <string name="email">Email</string>
    <string name="todo1">TODO</string>
    <string name="email_card">email</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="todo2">TODO</string>
    <string name="change_full_name">Change full name</string>
    <string name="edit_user_name">edit user name</string>
    <string name="edit_full_name">edit full name</string>
    <string name="change_email">change Email</string>
    <string name="change_mobile_no">change Mobile no</string>
    <string name="change_password">change password</string>
    <string name="todo3">TODO</string>
    <string name="log_out">Vanish Data</string>
    <string name="user_guid">User guide</string>
    <string name="todo33">TODO</string>
    <string name="sign_up_using_roomdb">Sign Up using RoomDB</string>
    <string name="log_in_using_sqlite">Log In using SQLite</string>
    <string name="log_in_using_roomdb">Log In using RoomDB</string>
    <string name="sign_up_using_sqlite">Sign up using SQLite</string>
    <string name="add_contact">Add Contact</string>
    <string name="user_guide">User Guide</string>
    <string name="log_in11">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out1">Log Out</string>
    <string name="gmaildemo_gmail_com">gmaildemo@gmail.com</string>
    <string name="go_to_log_in">go to log in</string>
    <string name="nav_open">nav open</string>
    <string name="nav_close">nav close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo11">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="todo111">TODO</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="upload_profilr_picture">upload profilr picture</string>
    <string name="enter_name">Enter Name</string>
    <string name="todo12">TODO</string>
    <string name="loading">Loading...</string>

</resources>