<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_cards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/profile_image_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/mark_zuckerberg" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="start|center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/full_name_text_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxEms="20"
                    android:maxLength="18"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageButton
                        android:id="@+id/menu_imageButton_card"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:background="@drawable/menu_image"
                        android:contentDescription="@string/todo2"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/user_name_text_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingStart="5dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/email_text_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/email_card"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/mobileNo_text_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:text="@string/mobile_no1"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

